:bug: Fix li spacing

--- a/assets/sass/theme.scss
+++ b/assets/sass/theme.scss
@@ -87,10 +87,6 @@ ol {
   padding-left: 1.8rem;
 }
 
-li {
-  padding: 0.1rem 0;
-}
-
 main,
 .menu {
   box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
@@ -102,6 +98,10 @@ main {
   max-width: calc(100% - 216px);
   order: 2;
   padding: 20px;
+
+  li {
+    margin: 0.2rem 0;
+  }
 }
 
 article {
